--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   --text:#e4e4e7;
 }
 
-* { box-sizing:border-box; margin:0; padding:0; }
+*{margin:0;padding:0;box-sizing:border-box}
 
-body {
+body{
   background:var(--bg);
   color:var(--text);
   min-height:100svh;
-  font-family:system-ui, sans-serif;
+  font-family:system-ui,sans-serif;
 }
 
 /* APP */
-.app {
+.app{
   max-width:720px;
   margin:0 auto;
   min-height:100svh;
@@ -41,7 +41,7 @@ body {
 }
 
 /* HEADER */
-.header {
+.header{
   padding:1rem;
   background:var(--header);
   border-bottom:1px solid var(--border);
@@ -50,17 +50,17 @@ body {
   align-items:center;
 }
 
-.avatar {
+.avatar{
   width:42px;height:42px;border-radius:50%;
   background:linear-gradient(135deg,var(--u1),var(--u2));
   display:flex;align-items:center;justify-content:center;
   font-weight:700;color:#fff;
 }
 
-.status { font-size:.75rem; color:var(--u2); }
+.status{font-size:.75rem;color:var(--u2)}
 
 /* MESSAGES */
-.messages {
+.messages{
   flex:1;
   overflow-y:auto;
   padding:1rem;
@@ -69,41 +69,41 @@ body {
   gap:.75rem;
 }
 
-.msg {
+.msg{
   max-width:75%;
   padding:.75rem 1rem;
   border-radius:16px;
   animation:fade .25s ease;
 }
 
-.user {
+.user{
   align-self:flex-end;
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;
   border-bottom-right-radius:4px;
 }
 
-.nyla {
+.nyla{
   align-self:flex-start;
   background:var(--nyla);
   border-bottom-left-radius:4px;
 }
 
-.emotion {
+.emotion{
   font-size:.7rem;
   margin-top:4px;
   opacity:.7;
   color:var(--u2);
 }
 
-@keyframes fade {
+@keyframes fade{
   from{opacity:0;transform:translateY(6px)}
   to{opacity:1;transform:none}
 }
 
 /* TYPING */
-.typing { display:flex; gap:6px; }
-.dot {
+.typing{display:flex;gap:6px}
+.dot{
   width:8px;height:8px;border-radius:50%;
   background:var(--u2);
   animation:bounce 1.4s infinite;
@@ -111,13 +111,13 @@ body {
 .dot:nth-child(2){animation-delay:.2s}
 .dot:nth-child(3){animation-delay:.4s}
 
-@keyframes bounce {
+@keyframes bounce{
   0%,80%,100%{opacity:.4}
   40%{opacity:1;transform:translateY(-6px)}
 }
 
 /* INPUT */
-.input {
+.input{
   display:flex;
   gap:.5rem;
   padding:1rem;
@@ -125,7 +125,7 @@ body {
   border-top:1px solid var(--border);
 }
 
-.input input {
+.input input{
   flex:1;
   background:none;
   border:none;
@@ -134,7 +134,7 @@ body {
   font-size:1rem;
 }
 
-.input button {
+.input button{
   width:40px;height:40px;border-radius:50%;
   border:none;
   background:linear-gradient(135deg,var(--u1),var(--u2));
@@ -143,7 +143,7 @@ body {
 .input button:disabled{opacity:.5}
 
 /* LIVE2D */
-#nyla-canvas {
+#nyla-canvas{
   position:fixed;
   right:0;
   bottom:0;
@@ -176,7 +176,8 @@ body {
 
 <canvas id="nyla-canvas"></canvas>
 
-<!-- LIBS -->
+<!-- ✅ REQUIRED LIB ORDER -->
+<script src="./live2dcubismcore.min.js"></script>
 <script src="https://unpkg.com/pixi.js@7.3.2/dist/pixi.min.js"></script>
 <script src="https://unpkg.com/pixi-live2d-display@0.4.0/dist/index.min.js"></script>
 
@@ -188,8 +189,7 @@ const input=document.getElementById("input");
 const send=document.getElementById("send");
 const statusText=document.getElementById("status");
 
-let typing;
-let locked=false;
+let typing,locked=false;
 
 send.onclick=sendMsg;
 input.onkeydown=e=>e.key==="Enter"&&sendMsg();
@@ -215,38 +215,23 @@ function showTyping(){
   msgs.appendChild(typing);
   msgs.scrollTop=msgs.scrollHeight;
 }
-
-function hideTyping(){ typing?.remove(); }
+function hideTyping(){typing?.remove()}
 
 async function sendMsg(){
-  if(!input.value||locked) return;
+  if(!input.value||locked)return;
   const text=input.value;
   input.value="";
   add(text,"user");
   showTyping();
-
   try{
     const r=await fetch(API,{
       method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body:JSON.stringify({ message:text })
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({message:text})
     });
     const d=await r.json();
     hideTyping();
     add(d.reply,"nyla",d.emotion);
-
-    if(d.cooldown){
-      locked=true;
-      statusText.textContent="recharging… 🔋";
-      input.placeholder="Nyla is recharging…";
-      send.disabled=true;
-      setTimeout(()=>{
-        locked=false;
-        statusText.textContent="online";
-        input.placeholder="Message Nyla…";
-        send.disabled=false;
-      },60000);
-    }
   }catch{
     hideTyping();
     add("Something broke 😭","nyla","shocked");
@@ -273,12 +258,9 @@ async function sendMsg(){
     model.y=app.renderer.height;
 
     app.stage.addChild(model);
-
-    if(model.motion) model.motion("Idle");
-
-    console.log("💜 Nyla loaded successfully");
+    console.log("💜 Nyla loaded");
   }catch(e){
-    console.error("Live2D error:",e);
+    console.error("❌ Live2D failed:",e);
   }
 })();
 </script>
