--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Nyla 💜</title>
 
 <style>
-:root {
+:root{
   --bg:#0f0f1a;
   --panel:#16161f;
   --header:#1a1a26;
@@ -16,7 +16,6 @@
   --u2:#a78bfa;
   --text:#e4e4e7;
 }
-
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
@@ -49,14 +48,12 @@ body{
   gap:.75rem;
   align-items:center;
 }
-
 .avatar{
   width:42px;height:42px;border-radius:50%;
   background:linear-gradient(135deg,var(--u1),var(--u2));
   display:flex;align-items:center;justify-content:center;
   font-weight:700;color:#fff;
 }
-
 .status{font-size:.75rem;color:var(--u2)}
 
 /* MESSAGES */
@@ -68,34 +65,29 @@ body{
   flex-direction:column;
   gap:.75rem;
 }
-
 .msg{
   max-width:75%;
   padding:.75rem 1rem;
   border-radius:16px;
   animation:fade .25s ease;
 }
-
 .user{
   align-self:flex-end;
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;
   border-bottom-right-radius:4px;
 }
-
 .nyla{
   align-self:flex-start;
   background:var(--nyla);
   border-bottom-left-radius:4px;
 }
-
 .emotion{
   font-size:.7rem;
   margin-top:4px;
   opacity:.7;
   color:var(--u2);
 }
-
 @keyframes fade{
   from{opacity:0;transform:translateY(6px)}
   to{opacity:1;transform:none}
@@ -110,7 +102,6 @@ body{
 }
 .dot:nth-child(2){animation-delay:.2s}
 .dot:nth-child(3){animation-delay:.4s}
-
 @keyframes bounce{
   0%,80%,100%{opacity:.4}
   40%{opacity:1;transform:translateY(-6px)}
@@ -124,7 +115,6 @@ body{
   background:var(--header);
   border-top:1px solid var(--border);
 }
-
 .input input{
   flex:1;
   background:none;
@@ -133,14 +123,12 @@ body{
   color:var(--text);
   font-size:1rem;
 }
-
 .input button{
   width:40px;height:40px;border-radius:50%;
   border:none;
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;font-size:1.1rem;
 }
-.input button:disabled{opacity:.5}
 
 /* LIVE2D */
 #nyla-canvas{
@@ -150,7 +138,7 @@ body{
   width:360px;
   height:560px;
   pointer-events:none;
-  z-index:1;
+  z-index:5;
 }
 </style>
 </head>
@@ -162,21 +150,22 @@ body{
     <div class="avatar">N</div>
     <div>
       <div>Nyla</div>
-      <div class="status" id="status">online</div>
+      <div class="status">online</div>
     </div>
   </div>
 
   <div class="messages" id="messages"></div>
 
   <div class="input">
-    <input id="input" placeholder="Message Nyla…">
+    <input id="input" placeholder="Message Nyla…" />
     <button id="send">➤</button>
   </div>
 </div>
 
+<!-- CANVAS -->
 <canvas id="nyla-canvas"></canvas>
 
-<!-- ✅ REQUIRED LIB ORDER -->
+<!-- REQUIRED LIBS -->
 <script src="./live2dcubismcore.min.js"></script>
 <script src="https://unpkg.com/pixi.js@7.3.2/dist/pixi.min.js"></script>
 <script src="https://unpkg.com/pixi-live2d-display@0.4.0/dist/index.min.js"></script>
@@ -187,9 +176,7 @@ const API="https://nyla-api.onrender.com/nyla";
 const msgs=document.getElementById("messages");
 const input=document.getElementById("input");
 const send=document.getElementById("send");
-const statusText=document.getElementById("status");
-
-let typing,locked=false;
+let typing;
 
 send.onclick=sendMsg;
 input.onkeydown=e=>e.key==="Enter"&&sendMsg();
@@ -218,7 +205,7 @@ function showTyping(){
 function hideTyping(){typing?.remove()}
 
 async function sendMsg(){
-  if(!input.value||locked)return;
+  if(!input.value) return;
   const text=input.value;
   input.value="";
   add(text,"user");
@@ -234,22 +221,26 @@ async function sendMsg(){
     add(d.reply,"nyla",d.emotion);
   }catch{
     hideTyping();
-    add("Something broke 😭","nyla","shocked");
+    add("I'm recharging rn 🔋 try again soon","nyla","sleepy");
   }
 }
 
-/* ===== LIVE2D ===== */
+/* ===== LIVE2D (STABLE) ===== */
 (async()=>{
   try{
+    const canvas=document.getElementById("nyla-canvas");
     const app=new PIXI.Application({
-      view:document.getElementById("nyla-canvas"),
       width:360,
       height:560,
-      backgroundAlpha:0
+      backgroundAlpha:0,
+      resolution:window.devicePixelRatio||1
     });
 
+    canvas.replaceWith(app.view);
+    app.view.id="nyla-canvas";
+
     const model=await PIXI.live2d.Live2DModel.from(
-      "./1113_v2/Z.model3.json"
+      "1113_v2/Z.model3.json"
     );
 
     model.anchor.set(0.5,1);
@@ -258,9 +249,10 @@ async function sendMsg(){
     model.y=app.renderer.height;
 
     app.stage.addChild(model);
-    console.log("💜 Nyla loaded");
+    console.log("💜 Nyla LIVE2D loaded");
+
   }catch(e){
-    console.error("❌ Live2D failed:",e);
+    console.error("Live2D error:",e);
   }
 })();
 </script>
