--- a/index.html
+++ b/index.html
@@ -93,6 +93,28 @@ body{
   to{opacity:1;transform:none}
 }
 
+/* TYPING */
+.typing{
+  display:flex;
+  gap:6px;
+  padding:.6rem .8rem;
+  background:var(--bubble);
+  border-radius:16px;
+  width:fit-content;
+}
+.dot{
+  width:8px;height:8px;border-radius:50%;
+  background:var(--u2);
+  animation:bounce 1.4s infinite;
+}
+.dot:nth-child(2){animation-delay:.2s}
+.dot:nth-child(3){animation-delay:.4s}
+
+@keyframes bounce{
+  0%,80%,100%{opacity:.4}
+  40%{opacity:1;transform:translateY(-6px)}
+}
+
 /* INPUT */
 .input{
   display:flex;
@@ -125,7 +147,9 @@ body{
   width:320px;
   max-height:80vh;
   pointer-events:none;
-  z-index:1;
+  z-index:10; /* IMPORTANT */
+  display:block;
+  opacity:1;
   transition:opacity .25s ease;
 }
 </style>
@@ -157,7 +181,7 @@ body{
 /* ===== CONFIG ===== */
 const API = "https://nyla-api.onrender.com/nyla";
 
-/* emotion → png (FINAL PATH) */
+/* emotion → png */
 const emotionMap = {
   happy: "assets/nyla/happy.png",
   sad: "assets/nyla/sad.png",
@@ -176,9 +200,12 @@ const msgs = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
 
+let typingBubble = null;
+
 send.onclick = sendMsg;
 input.onkeydown = e => e.key === "Enter" && sendMsg();
 
+/* ===== UI HELPERS ===== */
 function add(text, cls, emo){
   const m = document.createElement("div");
   m.className = "msg " + cls;
@@ -196,6 +223,24 @@ function add(text, cls, emo){
   msgs.scrollTop = msgs.scrollHeight;
 }
 
+function showTyping(){
+  typingBubble = document.createElement("div");
+  typingBubble.className = "msg nyla";
+  typingBubble.innerHTML =
+    '<div class="typing">' +
+    '<div class="dot"></div>' +
+    '<div class="dot"></div>' +
+    '<div class="dot"></div>' +
+    '</div>';
+  msgs.appendChild(typingBubble);
+  msgs.scrollTop = msgs.scrollHeight;
+}
+
+function hideTyping(){
+  if(typingBubble) typingBubble.remove();
+  typingBubble = null;
+}
+
 function setEmotion(emo){
   const src = emotionMap[emo] || emotionMap.idle;
   nylaImg.style.opacity = "0";
@@ -209,11 +254,13 @@ function setEmotion(emo){
   },4000);
 }
 
+/* ===== SEND ===== */
 async function sendMsg(){
   if(!input.value) return;
   const text = input.value;
   input.value = "";
   add(text,"user");
+  showTyping();
 
   try{
     const r = await fetch(API,{
@@ -222,8 +269,10 @@ async function sendMsg(){
       body:JSON.stringify({ message:text })
     });
     const d = await r.json();
+    hideTyping();
     add(d.reply,"nyla",d.emotion);
   }catch{
+    hideTyping();
     add("I'm recharging rn 🔋","nyla","sleepy");
   }
 }
