--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Nyla 💜</title>
 
 <style>
@@ -37,7 +37,7 @@ body{
   border-left:1px solid var(--border);
   border-right:1px solid var(--border);
   position:relative;
-  z-index:2;
+  overflow:hidden;
 }
 
 /* HEADER */
@@ -93,21 +93,18 @@ body{
   to{opacity:1;transform:none}
 }
 
-/* TYPING INDICATOR */
+/* TYPING */
 .typing{
   display:flex;
   gap:6px;
 }
 .dot{
-  width:8px;
-  height:8px;
-  border-radius:50%;
+  width:8px;height:8px;border-radius:50%;
   background:var(--u2);
   animation:bounce 1.4s infinite;
 }
 .dot:nth-child(2){animation-delay:.2s}
 .dot:nth-child(3){animation-delay:.4s}
-
 @keyframes bounce{
   0%,80%,100%{opacity:.4}
   40%{opacity:1;transform:translateY(-6px)}
@@ -120,6 +117,8 @@ body{
   padding:1rem;
   background:var(--header);
   border-top:1px solid var(--border);
+  position:relative;
+  z-index:3;
 }
 .input input{
   flex:1;
@@ -130,21 +129,19 @@ body{
   font-size:1rem;
 }
 .input button{
-  width:40px;
-  height:40px;
-  border-radius:50%;
+  width:40px;height:40px;border-radius:50%;
   border:none;
   background:linear-gradient(135deg,var(--u1),var(--u2));
   color:#fff;
   font-size:1.1rem;
 }
 
-/* NYLA PNG */
+/* NYLA PNG (STABLE) */
 #nyla{
-  position:fixed;
-  right:10px;
-  bottom:110px; /* 👈 ABOVE INPUT BAR */
-  width:300px;
+  position:absolute;
+  right:-10px;
+  bottom:90px; /* safely above input */
+  width:260px;
   max-height:70vh;
   pointer-events:none;
   z-index:1;
@@ -166,17 +163,17 @@ body{
 
   <div class="messages" id="messages"></div>
 
+  <!-- NYLA IMAGE INSIDE APP -->
+  <img id="nyla" src="assets/nyla/idle.png" alt="Nyla">
+
   <div class="input">
     <input id="input" placeholder="Message Nyla…" autocomplete="off">
     <button id="send">➤</button>
   </div>
 </div>
 
-<!-- NYLA IMAGE -->
-<img id="nyla" src="assets/nyla/idle.png" alt="Nyla">
-
 <script>
-/* ================= CONFIG ================= */
+/* CONFIG */
 const API = "https://nyla-api.onrender.com/nyla";
 
 /* emotion → png */
@@ -203,7 +200,7 @@ let typingBubble = null;
 send.onclick = sendMsg;
 input.onkeydown = e => e.key === "Enter" && sendMsg();
 
-/* ================= UI HELPERS ================= */
+/* UI HELPERS */
 function add(text, cls, emo){
   const m = document.createElement("div");
   m.className = "msg " + cls;
@@ -229,8 +226,7 @@ function showTyping(){
       <div class="dot"></div>
       <div class="dot"></div>
       <div class="dot"></div>
-    </div>
-  `;
+    </div>`;
   msgs.appendChild(typingBubble);
   msgs.scrollTop = msgs.scrollHeight;
 }
@@ -253,7 +249,7 @@ function setEmotion(emo){
   },4000);
 }
 
-/* ================= SEND ================= */
+/* SEND */
 async function sendMsg(){
   if(!input.value) return;
   const text = input.value;
