--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@ body{
   background:var(--header);
   border-bottom:1px solid var(--border);
   display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.header-left{
+  display:flex;
   gap:.75rem;
   align-items:center;
 }
@@ -56,6 +61,10 @@ body{
   font-weight:700;color:#fff;
 }
 .status{font-size:.75rem;color:var(--u2)}
+.settings-btn{
+  font-size:1.3rem;
+  cursor:pointer;
+}
 
 /* MESSAGES */
 .messages{
@@ -70,7 +79,6 @@ body{
   max-width:75%;
   padding:.75rem 1rem;
   border-radius:16px;
-  animation:fade .25s ease;
 }
 .user{
   align-self:flex-end;
@@ -86,11 +94,6 @@ body{
   opacity:.7;
   color:var(--u2);
   margin-top:4px;
-}
-
-@keyframes fade{
-  from{opacity:0;transform:translateY(6px)}
-  to{opacity:1;transform:none}
 }
 
 /* TYPING */
@@ -139,10 +142,42 @@ body{
   right:-10px;
   bottom:90px;
   width:260px;
-  max-height:70vh;
   pointer-events:none;
   z-index:1;
   transition:opacity .25s ease;
+}
+
+/* SETTINGS PANEL */
+.settings{
+  position:fixed;
+  top:0;
+  right:-260px;
+  width:260px;
+  height:100%;
+  background:#14141d;
+  border-left:1px solid var(--border);
+  padding:1rem;
+  transition:right .3s ease;
+  z-index:10;
+}
+.settings.open{ right:0 }
+.settings h3{
+  margin-bottom:1rem;
+  color:var(--u2);
+}
+.settings a,
+.settings button{
+  display:block;
+  width:100%;
+  margin-bottom:.75rem;
+  padding:.6rem;
+  background:var(--bubble);
+  color:var(--text);
+  border:none;
+  border-radius:8px;
+  text-align:left;
+  cursor:pointer;
+  text-decoration:none;
 }
 </style>
 </head>
@@ -151,11 +186,14 @@ body{
 
 <div class="app">
   <div class="header">
-    <div class="avatar">N</div>
-    <div>
-      <div>Nyla</div>
-      <div class="status">online</div>
+    <div class="header-left">
+      <div class="avatar">N</div>
+      <div>
+        <div>Nyla</div>
+        <div class="status">online</div>
+      </div>
     </div>
+    <div class="settings-btn" id="openSettings">⚙️</div>
   </div>
 
   <div class="messages" id="messages"></div>
@@ -168,29 +206,49 @@ body{
   </div>
 </div>
 
+<!-- SETTINGS -->
+<div class="settings" id="settings">
+  <h3>Settings</h3>
+  <a href="https://www.instagram.com/blub_fish.stacis?igsh=bmY1bnh6dGJxYnYx" target="_blank">
+    Developer’s Instagram
+  </a>
+  <button onclick="alert('Open DevTools → Application → Local Storage')">
+    View Local Storage
+  </button>
+  <button onclick="clearChats()" style="color:#f87171">
+    Clear Chats
+  </button>
+</div>
+
 <script>
 /* CONFIG */
 const API = "https://nyla-api.onrender.com/nyla";
+const STORAGE_KEY = "nyla_chats";
 
 const emotionMap = {
-  happy: "assets/nyla/happy.png",
-  sad: "assets/nyla/sad.png",
-  angry: "assets/nyla/angry.png",
-  blush: "assets/nyla/blush.png",
-  shocked: "assets/nyla/shocked.png",
-  smug: "assets/nyla/smug.png",
-  sleepy: "assets/nyla/sleepy.png",
-  excited: "assets/nyla/excited.png",
-  gamer: "assets/nyla/gamer.png",
-  idle: "assets/nyla/idle.png"
+  happy:"assets/nyla/happy.png",
+  sad:"assets/nyla/sad.png",
+  angry:"assets/nyla/angry.png",
+  blush:"assets/nyla/blush.png",
+  shocked:"assets/nyla/shocked.png",
+  smug:"assets/nyla/smug.png",
+  sleepy:"assets/nyla/sleepy.png",
+  excited:"assets/nyla/excited.png",
+  gamer:"assets/nyla/gamer.png",
+  idle:"assets/nyla/idle.png"
 };
 
 const nylaImg = document.getElementById("nyla");
 const msgs = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
+const settings = document.getElementById("settings");
 
 let typingBubble = null;
+
+/* SETTINGS */
+document.getElementById("openSettings").onclick = () =>
+  settings.classList.toggle("open");
 
 /* EVENTS */
 send.addEventListener("click", sendMsg);
@@ -201,10 +259,13 @@ input.addEventListener("keydown", e => {
   }
 });
 
-/* UI */
-function add(text, cls, emo){
+/* MEMORY LOAD */
+loadMemory();
+
+/* UI HELPERS */
+function add(text, sender, emo){
   const m = document.createElement("div");
-  m.className = "msg " + cls;
+  m.className = "msg " + sender;
   m.textContent = text;
   msgs.appendChild(m);
 
@@ -216,6 +277,7 @@ function add(text, cls, emo){
     setEmotion(emo);
   }
 
+  saveMemory({ sender, text, emotion: emo || null });
   msgs.scrollTop = msgs.scrollHeight;
 }
 
@@ -240,16 +302,8 @@ function hideTyping(){
 }
 
 function setEmotion(emo){
-  const src = emotionMap[emo] || emotionMap.idle;
-  nylaImg.style.opacity = "0";
-  setTimeout(()=>{
-    nylaImg.src = src;
-    nylaImg.style.opacity = "1";
-  },120);
-
-  setTimeout(()=>{
-    nylaImg.src = emotionMap.idle;
-  },4000);
+  nylaImg.src = emotionMap[emo] || emotionMap.idle;
+  setTimeout(()=>nylaImg.src = emotionMap.idle,4000);
 }
 
 /* SEND */
@@ -272,8 +326,27 @@ async function sendMsg(){
     add(d.reply,"nyla",d.emotion);
   }catch{
     hideTyping();
-    add("I'm recharging rn 🔋","nyla","sleepy");
+    add("I’m recharging rn 🔋","nyla","sleepy");
   }
+}
+
+/* MEMORY */
+function saveMemory(msg){
+  const arr = JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]");
+  arr.push(msg);
+  localStorage.setItem(STORAGE_KEY, JSON.stringify(arr));
+}
+
+function loadMemory(){
+  const arr = JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]");
+  arr.forEach(m => add(m.text, m.sender, m.emotion));
+}
+
+function clearChats(){
+  localStorage.removeItem(STORAGE_KEY);
+  msgs.innerHTML = "";
+  nylaImg.src = emotionMap.idle;
+  settings.classList.remove("open");
 }
 </script>
 
